# Generated by Django 3.1.14 on 2022-10-19 09:24

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('viewer', '0024_add_job_request_start_and_finish_times'),
    ]

    operations = [
        migrations.CreateModel(
            name='Squonk2Org',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('uuid', models.TextField(max_length=40)),
                ('name', models.TextField(max_length=80)),
                ('as_url', models.URLField()),
                ('as_version', models.TextField()),
            ],
        ),
    ]
